--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<h1>Start!</h1>
-<div class="grid">
-  <div class="col">1</div>
-  <div class="col">2</div>
-  <div class="col">3</div>
-</div>
+<app-header></app-header>
+<app-footer></app-footer>
