--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header>
+  <nav class="navbar">
+    <a href="" class="navbar-logo">
+      <img src="../../../../assets/images/movie-logo.png" alt="movie-logo" />
+    </a>
+    <ul class="navbar-links">
+      <li><a href="">Home</a></li>
+      <li><a href="">Movies</a></li>
+      <li><a href="">Tv Shows</a></li>
+      <li><a href="">Categories</a></li>
+    </ul>
+  </nav>
+</header>
