--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <span>&copy; 2023 MOVIE All rights reserved.</span>
+  <span>&copy; {{ date | date : "YYYY" }} MOVIE All rights reserved.</span>
 </footer>
