add routerLink to home and movies

--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -4,8 +4,8 @@
       <img src="../../../../assets/images/movie-logo.png" alt="movie-logo" />
     </a>
     <ul class="navbar-links">
-      <li><a href="">Home</a></li>
-      <li><a href="">Movies</a></li>
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/movies">Movies</a></li>
       <li><a href="">Tv Shows</a></li>
       <li><a href="">Categories</a></li>
     </ul>
