--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -6,8 +6,8 @@
     <ul class="navbar-links">
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/movies">Movies</a></li>
-      <li><a href="">Tv Shows</a></li>
-      <li><a href="">Categories</a></li>
+      <li><a routerLink="/tvshows">Tv Shows</a></li>
+      <li><a routerLink="/categories">Categories</a></li>
     </ul>
   </nav>
 </header>
