style slider component

--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -2,7 +2,8 @@
   <div class="slide">
     <div class="slide-bg">
       <img
-        src="https://image.tmdb.org/t/p/w500/kqjL17yufvn9OVLyXYpvtyrFfak.jpg"
+        class="slide-bg-image"
+        src="https://image.tmdb.org/t/p/original//r9PkFnRUIthgBp2JZZzD380MWZy.jpg"
         alt=""
       />
       <div class="slide-pane">
@@ -10,14 +11,14 @@
         <div class="meta">
           <div class="info">
             <span class="rating">
-              <span>star</span><span class="rating-value">7.5</span
-              ><span>/10</span>
+              <span class="app-icon">star</span
+              ><span class="rating-value">7.5</span><span>/10</span>
             </span>
             <span>463 Reviews</span>
             <span>2021</span>
           </div>
         </div>
-        <div class="description">
+        <div class="desc mt-6">
           A woman whose visit to a hair salon turns into a nightmare when she is
           blackmailed by its owner.
         </div>
