--- a/src/app/components/items-banner/items-banner.component.html
+++ b/src/app/components/items-banner/items-banner.component.html
@@ -1,24 +1,25 @@
 <div class="container">
+  <h2>Tranding movies</h2>
   <div class="grid">
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
-    <div class="col-2">
+    <div class="col-6 md:col-3 lg:col-2">
       <movie-item></movie-item>
     </div>
   </div>
