--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
 <app-slider [items]="movies"></app-slider>
+<items-banner></items-banner>
+<items-banner></items-banner>
+<items-banner></items-banner>
+<items-banner></items-banner>
