seperate image path to constant file and update slider and movie-item

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,4 @@
-<app-slider [items]="movies"></app-slider>
-<items-banner></items-banner>
-<items-banner></items-banner>
-<items-banner></items-banner>
-<items-banner></items-banner>
+<app-slider [items]="upComingMovies"></app-slider>
+<items-banner [items]="upComingMovies" title="Upcoming Movies"></items-banner>
+<items-banner [items]="popularMovies" title="Popular Movies"></items-banner>
+<items-banner [items]="topRatedMovies" title="Top Rated Movies"></items-banner>
