--- a/src/app/components/movie-item/movie-item.component.html
+++ b/src/app/components/movie-item/movie-item.component.html
@@ -1,13 +1,16 @@
-<a class="movie-item">
-  <div class="movie-item-rating">
-    <i class="app-icon">star</i>
-    <span>7</span>/10
-  </div>
-  <div class="movie-item-image">
-    <img
-      src="https://image.tmdb.org/t/p/original/r9PkFnRUIthgBp2JZZzD380MWZy.jpg"
-      alt="movie-image"
-    />
-  </div>
-  <div class="movie-item-title">The Vault</div>
-</a>
+<ng-container *ngIf="movieData">
+  <a class="movie-item">
+    <div class="movie-item-rating">
+      <i class="app-icon">star</i>
+      <span>{{ movieData.vote_average }}</span
+      >/10
+    </div>
+    <div class="movie-item-image">
+      <img
+        [src]="imagesSizes.medium + movieData.poster_path"
+        [alt]="movieData.title"
+      />
+    </div>
+    <div class="movie-item-title">{{ movieData.title }}</div>
+  </a>
+</ng-container>
