--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="movieData">
-  <app-slider [items]="[movieData]"></app-slider>
+  <app-slider [items]="[movieData]" [isBaner]="true"></app-slider>
 </ng-container>
