--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,7 +1,55 @@
 <ng-container *ngIf="movieData">
   <app-slider [items]="[movieData]" [isBaner]="true"></app-slider>
   <p-tabView>
-    <p-tabPanel header="Overview"> Content 1 </p-tabPanel>
+    <p-tabPanel header="Overview">
+      <div class="grid">
+        <div class="col-12 md:col-3 lg:col-3">
+          <img
+            class="poster"
+            [src]="imagesSizes.medium + movieData.poster_path"
+            [alt]="movieData.title"
+          />
+        </div>
+        <div class="col-12 md:col-9 lg:col-9">
+          <h2>Overview</h2>
+          <p class="overview">{{ movieData.overview }}</p>
+          <div class="stat">
+            <div class="label">Release Date</div>
+            <div class="value">
+              {{ movieData.release_date | date : "dd.MM.yyyy" }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Language</div>
+            <div class="value">
+              {{ movieData.original_language | uppercase }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Revenue:</div>
+            <div class="value">
+              {{ movieData.revenue | currency }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Duration:</div>
+            <div class="value">{{ movieData.runtime }} min</div>
+          </div>
+          <div class="stat">
+            <div class="label">Status:</div>
+            <div class="value">{{ movieData.status }}</div>
+          </div>
+          <div class="stat">
+            <div class="label">Genres:</div>
+            <div class="value">
+              <span *ngFor="let genre of movieData.genres">
+                {{ genre.name }}
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </p-tabPanel>
     <p-tabPanel header="Videos"> Content 2 </p-tabPanel>
     <p-tabPanel header="Photos"> Content 3 </p-tabPanel>
   </p-tabView>
