--- a/src/app/pages/movie/movie.component.scss
+++ b/src/app/pages/movie/movie.component.scss
@@ -1,5 +1,29 @@
+@import "../../../styles/colors";
+
 :host ::ng-deep {
   .p-tabview-nav {
     justify-content: center;
+  }
+}
+
+.poster {
+  max-width: 100%;
+}
+
+.overview {
+  line-height: 1.5;
+}
+
+.stat {
+  display: flex;
+  margin-bottom: 15px;
+
+  .label {
+    width: 150px;
+    font-weight: bold;
+  }
+
+  .value {
+    color: $primary;
   }
 }
