--- a/src/app/pages/genres/genres.component.html
+++ b/src/app/pages/genres/genres.component.html
@@ -2,7 +2,9 @@
   <h1>Movies Categories</h1>
   <div class="grid">
     <div class="col-6 md:col-3 lg:col-2" *ngFor="let cat of genres">
-      <a class="cat-link">{{ cat.name }}</a>
+      <a class="cat-link" [routerLink]="'/movies/categories/' + cat.id">{{
+        cat.name
+      }}</a>
     </div>
   </div>
 </div>
