make api request based on data from input and display results

--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -9,7 +9,7 @@
             pInputText
             placeholder="Search"
             [(ngModel)]="inputData"
-            (keyup)="onInputChange()"
+            (change)="onInputChange()"
           />
         </span>
       </div>
